--- a/style.css
+++ b/style.css
@@ -75,13 +75,14 @@ header > .welcome > .button > button:hover {
 
 .sidebar {
    top: 0%;
-   left: 50%;
-   width: 15%;
+   width: 20%;
+   position: absolute;
+   z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
-   background-color:rgba(122, 240, 100, 0.3);
+   background-image: linear-gradient(90deg, rgba(122, 240, 100, 0.5), rgba(255, 255, 255, 0.8))
 }
 
 .sidebar > .dashboard {
