--- a/style.css
+++ b/style.css
@@ -5,16 +5,20 @@ body {
 header {
     display: flex;
     flex-direction: column;
-    width: 85%;
-    margin-left: 15%;
     background-image: linear-gradient(rgba(122, 240, 100, 0.5), rgba(255, 255, 255, 0.8))
 }
+
 
 header .icons {
     position: relative;
     display: flex;
     align-items: center;
-    left: 62%;
+    left: 60%;
+    margin-left: 8%;
+}
+
+header .icons:hover {
+    cursor: pointer;
 }
 
 header .icons > input {
@@ -83,7 +87,11 @@ header > .welcome > .button > button:hover {
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
-   background-image: linear-gradient(90deg, rgba(122, 240, 100, 0.5), rgba(255, 255, 255, 0.8))
+   background-image: linear-gradient(90deg, rgba(122, 240, 100, 0.5), rgba(255, 255, 255, 0.5))
+}
+
+.sidebar:hover {
+   background-image: linear-gradient(90deg, rgba(122, 240, 100, 0.9), rgba(0, 0, 0, 0.015))
 }
 
 .sidebar > .dashboard {
@@ -125,4 +133,11 @@ header > .welcome > .button > button:hover {
 
 .sidebar > .settings > div > i {
     margin-right: 10px;
+}
+
+
+.container {
+    position: absolute;
+    left: 25%;
+    display: grid;
 }
